--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 	--background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media () {
 	:root {
 		--foreground-rgb: 255, 255, 255;
 		--background-start-rgb: 0, 0, 0;
@@ -29,6 +29,7 @@ body hr {
     max-width: none;
     margin-bottom: 1em;
 }
+
 
 @layer utilities {
 	.text-balance {
