--- a/app/globals.css
+++ b/app/globals.css
@@ -18,11 +18,14 @@
 
 body {
     color: rgb(var(--foreground-rgb));
+	margin-bottom: 100px;
 }
 
 body > * {
-    max-width: 960px;
+    max-width: 1000px;
     margin: auto;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 body hr {
